2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Fix formating.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c, client-src/sendsize.c: Remove bogus fseek.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/calcsize.c: Quote amname.

2006-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Print an L_STATS with the hostname
	* server-src/reporter.c: Print hostname, org, config and date at the
				 beginning of the report

2006-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/dgram.c (dgram_cat),
	  common-src/packet.c (pkt_init, pkt_cat): Works correctly with
						   vsnprintf returning -1.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (libamanda_la_LIBADD) Remove @LTLIBOBJS@.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: stralloc(tapedev).
	* configure.in (EXAMPLE_TAPEDEV): Set to /dev/null if no tape-device.
	* example/amanda-client.conf.in, example/amanda.conf.in
	  example/chg-mcutil.conf.in: Use EXAMPLE_TAPEDEV.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/alloca.c, common-src/getcwd.c, common-src/mktime.c,
	  common-src/memmove.c, common-src/snprintf.c,
	  common-src/strcasecmp.c, common-src/strerror.c,
	  common-src/strftime.c, common-src/strncasecmp.c,
	  common-src/strstr.c, common-src/waitpid.c,
	  COPYRIGHT-APACHE: Removed files.
	* configure.in: Remove many AC_REPLACE_FUNCS.
	* Makefile.am (pkgdata_DATA): Remove COPYRIGHT-APACHE.

2006-10-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: Remove all reference to our regex
	* common-src/match.c: #include <regex.h>, the system regex
	* common-src/memmove.c: No more memmove in regex-src
	* Makefile.am (pkgdata_DATA): Remove COPYRIGHT-REGEX
	* Makefile.am (EXTRA_DIST): Remove regex-src/*
	* regex-src: Remove directory.